# general-programs

./: .editorconfig  .gitignore  .hgignore  VsMacroForCodingStyle.txt  resharperStyle.xml
LvqEmn/: AnalyzeHeuristics.fsx  App.xaml  BestGlobalLearningRates.fsx  CMakeLists.txt  CreateGaussianCloud.cs  DynCreation.fsx  FindOptimalLearningRate.fsx  LVQeamon.csproj  LVQeamon.psess  LVQeamon.sln.old  LatexComparable.fsx  LatexOverallResultsAndCorrelations.fsx  LrDistrib.fsx  LrIntegrals.fsx  LvqEmn.sln  LvqEmn.sln.DotSettings  MainWindow.xaml  MainWindow.xaml.cs  MakeMyMachineSurviveBuilds.reg  MatSpeedTest.cs  RankResults.fsx  ResultsAnalysis.fsx  TrainingIterationCount.fsx  Window1.xaml  Window1.xaml.cs  Window2.xaml  Window2.xaml.cs  problematic sets.txt
LvqEmn/EigenBench/: CMakeLists.txt  DoTest.cpp  EigenBench.cpp  EigenBench.h  EigenBench.vcxproj  EigenBench.vcxproj.filters  GgmLvqBench.cpp  compileDevG++.bat  compileV2G++.bat  copyVecTest.h  covariance.h  covarience.h  diagUpdateBench.h  eigenbenchB.cpp  learningBench.cpp  main.cpp  matmulTest.h  mulBench.cpp  mulBench.h  prodNormTest.h  projectionBench.h  resizeTest.h  standard.h  stdafx.cpp  stdafx.h  subtractBench.h
LvqEmn/GuiPlotTest/: App.xaml.cs  GuiPlotTest.csproj  MainWindow.xaml  MainWindow.xaml.cs
LvqEmn/GuiPlotTest/Properties/: Resources.Designer.cs  Settings.Designer.cs
LvqEmn/LvqBench/: BoostMatrixTest.h  CMakeLists.txt  CommandLinePerfTest.cpp  CommandLinePerfTest.vcxproj  CommandLinePerfTest.vcxproj.filters  EasyLvqTest.cpp  EasyLvqTest.h  LogNumber.h  LvqBench.cpp  LvqBench.vcxproj  LvqBench.vcxproj.filters  ReadMe.txt  compileV2G++.bat  stdafx.cpp  stdafx.h  vectorizationBug.cpp  vectorizationBug.h
LvqEmn/LvqDataModel/: Class1.cs  LvqDataModel.csproj
LvqEmn/LvqGui/: App.xaml  App.xaml.cs  AppSettings.xaml  AppSettings.xaml.cs  AppSettingsValues.cs  CloneableAs.cs  CreateDataSet.xaml  CreateDataSet.xaml.cs  CreateDataSetStar.xaml  CreateDataSetStar.xaml.cs  CreateDataSetStarValues.cs  CreateDataSetValues.cs  CreateGaussianCloud.cs  CreateGaussianCloudsDataset.xaml  CreateGaussianCloudsDataset.xaml.cs  CreateGaussianCloudsDatasetValues.cs  CreateLvqModel.xaml  CreateLvqModel.xaml.cs  CreateLvqModelValues.cs  CreateStarDataset.xaml  CreateStarDataset.xaml.cs  CreateStarDatasetValues.cs  DataSetLoader.cs  DataVerifiers.cs  DatasetResults.cs  GaussianCloudDatasetSettings.cs  GaussianCloudSettings.cs  HexConverter.cs  IHasSeed.cs  LVQeamon.csproj  LoadDataSet.xaml  LoadDataSet.xaml.cs  LoadDataSetValues.cs  LrAndError.cs  LrGuesser.cs  LrOptimizationResult.cs  LrOptimizationResults.cs  LrOptimizer.cs  LvqGui.csproj  LvqModels.cs  (+24 more)
LvqEmn/LvqGui/CoreGui/: App.xaml  App.xaml.cs  AppSettings.xaml  AppSettings.xaml.cs  LvqWindow.xaml  LvqWindow.xaml.cs  LvqWindowValues.cs  TrainingControl.xaml  TrainingControl.xaml.cs  TrainingControlValues.cs
LvqEmn/LvqGui/CreatorGui/: Cloneable.cs  CreateDataset.cs  CreateGaussianCloudsDataset.xaml  CreateGaussianCloudsDataset.xaml.cs  CreateGaussianCloudsDatasetValues.cs  CreateLvqModel.xaml  CreateLvqModel.xaml.cs  CreateLvqModelValues.cs  CreateStarDataset.xaml  CreateStarDataset.xaml.cs  CreateStarDatasetValues.cs  GaussianCloudSettings.cs  LoadDataset.xaml  LoadDataset.xaml.cs  LoadDatasetImpl.cs  LoadDatasetValues.cs  SeedHelpers.cs  ShorthandHelper.cs  StarSettings.cs
LvqEmn/LvqGui/LvqPlotting/: LvqMultiModel.cs  LvqStatName.cs  LvqStatPlots.cs  (+3 more)
LvqEmn/LvqLib/: AbstractLvqModel.cpp  AbstractLvqModel.h  AbstractProjectionLvqModel.h  BoostMatrixTest.cpp  BoostMatrixTest.h  CMakeLists.txt  CovarianceAndMean.h  CreateDataset.cpp  CreateDataset.h  DataSetUtils.cpp  DataSetUtils.h  FgmLvqModel.cpp  FgmLvqModel.h  FgmLvqPrototype.h  G2mLvqMatch.cpp  G2mLvqMatch.h  G2mLvqModel.cpp  G2mLvqModel.h  G2mLvqPrototype.cpp  G2mLvqPrototype.h  GgmLvqModel.cpp  GgmLvqModel.h  GgmLvqPrototype.h  GmFullLvqModel.cpp  GmFullLvqModel.h  GmLvqModel.cpp  GmLvqModel.h  GmmLvqModel.cpp  GmmLvqModel.h  GmmLvqPrototype.h  GoodBadMatch.cpp  GoodBadMatch.h  GpqLvqModel.cpp  GpqLvqModel.h  GsmLvqModel.cpp  GsmLvqModel.h  LVQCppNative.vcxproj  LVQCppNative.vcxproj.filters  LgmLvqModel.cpp  LgmLvqModel.h  (+57 more)
LvqEmn/LvqLibCli/: AssemblyInfo.cpp  AutoNative.h  GcAutoPtr.h  GcPtr.h  LVQCppCli.cpp  LVQCppCli.h  LVQCppCli.vcxproj  LVQCppCli.vcxproj.filters  LvqDatasetCli.cpp  LvqDatasetCli.h  LvqLibCli.vcxproj  LvqLibCli.vcxproj.filters  LvqModelCli.cpp  LvqModelCli.h  LvqModelSettingsCli.cpp  LvqModelSettingsCli.h  LvqTrainingStatCli.cpp  LvqTrainingStatCli.h  LvqWrapper.cpp  LvqWrapper.h  PointSet.h  ReadMe.txt  Stdafx.cpp  Stdafx.h  WrappingUtils.h
LvqEmn/LvqLibTest/: CMakeLists.txt  CovarianceStandalone.cpp  LvqLibTest.vcxproj  LvqLibTest.vcxproj.filters  RandomAssumptions.cpp  RowColAssignments.cpp  Sample.cpp  TestCovariance.cpp  TestNN.cpp  TestPca.cpp  TestUtils.cpp  driver.cpp  stdafx.h
LvqEmn/Properties/: Resources.Designer.cs  Settings.Designer.cs
LvqEmn/QuickPlotTest/: App.xaml  MainWindow.xaml  MainWindow.xaml.cs  QuickPlotTest.csproj
LvqEmn/ResultsAnalysis/: ErrorCorrelations.fs  GeneralHelpers.fs  GeneralSettings.fs  HeuristicAnalysis.fs  LatexOverallErrorTables.fs  LatexifyCompareMethods.fs  LatexifyResults.fs  LrOptResults.fs  LvqRunAnalysis.fs  ModelSettings.fs  OptimalLrSearch.fs  Program.fs  ResultAnalysis.fs  ResultParsing.fs  ResultsAnalysis.fsproj  Utils.fs
LvqEmn/allconfigs/: CMakeLists.txt  EigenBench[Mingw].bat  LvqBench[Msc].bat  LvqLibTest[Mingw].bat  LvqLibTest[Msc].bat  benchAllConfigs.bat  benchOneConfig.bat  build+EigenBench.bat  build+Lvq.bat  build+LvqBench.bat  build+LvqBench[Mingw].bat  build+LvqBench[Mingwonly].bat  build+LvqLibTest.bat  build+Lvq[Mingwonly].bat  buildAndLvqBenchWithMingw.bat  buildWithMingw.bat  buildWithMsc.bat  build[Mingw].bat  build[Mingw]Helper.bat  build[Msc].bat  build[Msc]Helper.bat  eigenBenchMingw.bat  eigenBenchMsc.bat  lvqBenchMingw.bat  lvqBenchMsc.bat  lvq[Mingw].bat  lvq[Msc].bat  mingw (2).txt  mingw.txt  msc (2).txt  msc.txt
LvqEmn/buildconfigs/: CMakeLists.txt
LvqEmn/notes/: Sample.html  generateTOC.js  report-style.css
(+1337 files in other folders)
